# fields2cover_ros

./: .dockerignore  CMakeLists.txt  CONTRIBUTORS  Dockerfile.humble  Dockerfile.noetic  README.md  package.xml
.github/workflows/: build_ros.yml  build_ros1.yml  build_ros2.yml  f2c_repo.repos
cfg/: Controls.cfg
field2cover_ros_robovak/: Readme.md
include/: Fields2CoverVisualizerNode.h
include/ros/: conversor.h
launch/: demo.rviz  gps_map.launch  no_gps.rviz  one_turn.rviz  view_field.launch  view_field2.launch.py
src/: Fields2CoverVisualizerNode.cpp  fields2cover_visualizer_node.cpp
src/ros/: conversor.cpp
test/: CMakeLists.txt  test_ros_conversor.cpp  unittests.test
