<?xml version="1.0"?>
<package format="2">
  <name>fields2cover_ros</name>
  <version>1.2.0</version>
  <description>The fields2cover_ros package is a wrapper of the fields2cover package</description>

  <maintainer email="gonzalo.miermunoz@wur.nl">Gonzalo Mier</maintainer>

  <license>BSD 3-Clause license</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>fields2cover</build_depend>
  <build_depend>fields2cover_msgs</build_depend>
 
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rostest</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>fields2cover</build_export_depend>
  <build_export_depend>fields2cover_msgs</build_export_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rostest</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>fields2cover</exec_depend>
  <exec_depend>fields2cover_msgs</exec_depend>


</package>
